<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.tresorit.zerokitsdk.viewmodel.EncryptTextViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Step 2: Enter some text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:enabled="@{!safeUnbox(viewmodel.inProgressEncrypt) &amp;&amp; !safeUnbox(viewmodel.inProgressDecrypt)}"
                android:onClick="@{viewmodel.clickListenerEncrypt}"
                android:text="Encrypt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="HardcodedText" />

            <ProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:visibility="@{safeUnbox(viewmodel.inProgressEncrypt) ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />


            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:enabled="@{!safeUnbox(viewmodel.inProgressEncrypt) &amp;&amp; !safeUnbox(viewmodel.inProgressDecrypt)}"
                android:gravity="bottom"
                android:hint="Enter some text that you want to encrypt"
                android:inputType="textMultiLine"
                android:text="@={viewmodel.textOriginal}"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{viewmodel.textSummary}"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4"
                tools:text="AAAAAAAAAAAAAAAA" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:enabled="@{!safeUnbox(viewmodel.inProgressDecrypt)}"
                android:hint="Encrypted text will be shown here"
                android:inputType="textMultiLine"
                android:text="@={viewmodel.textEncrypted}"
                android:textSize="14sp"
                android:visibility="@{(safeUnbox(viewmodel.inProgressEncrypt) || !safeUnbox(viewmodel.encryptClicked)) ? View.GONE : View.VISIBLE}"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/editText4"
                app:layout_constraintRight_toRightOf="@+id/editText4"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@{viewmodel.textDecrypted}"
                android:visibility="@{(safeUnbox(viewmodel.inProgressEncrypt) || !safeUnbox(viewmodel.encryptClicked)) ? View.GONE : View.VISIBLE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4" />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:visibility="@{safeUnbox(viewmodel.inProgressDecrypt) ? View.VISIBLE : View.GONE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4" />


            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                android:enabled="@{!safeUnbox(viewmodel.inProgressDecrypt)}"
                android:onClick="@{viewmodel.clickListenerCopy}"
                android:text="Copy"
                android:visibility="@{(safeUnbox(viewmodel.inProgressEncrypt) || !safeUnbox(viewmodel.encryptClicked)) ? View.GONE : View.VISIBLE}"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button3"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                tools:ignore="HardcodedText"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:enabled="@{!safeUnbox(viewmodel.inProgressDecrypt)}"
                android:onClick="@{viewmodel.clickListenerDecrypt}"
                android:text="Test Decrypt"
                android:visibility="@{(safeUnbox(viewmodel.inProgressEncrypt) || !safeUnbox(viewmodel.encryptClicked)) ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/button4"
                app:layout_constraintLeft_toRightOf="@+id/button4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button4"
                tools:ignore="HardcodedText"
                tools:visibility="visible" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>