<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.tresorit.zerokitsdk.viewmodel.RegistrationViewModel" />
    </data>

    <ScrollView
        android:background="@color/_background_material_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="wrap_content"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:error="@{viewmodel.userNameError}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    app:onFocusChangeListener="@{viewmodel.focusChangeListener}"
                    android:enabled="@{!safeUnbox(viewmodel.inProgress)}"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.userName}"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:errorEnabled="true"
                app:error="@{viewmodel.passwordError}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                app:passwordToggleEnabled="false">

                <com.tresorit.zerokit.PasswordEditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    app:passwordExporter="@{viewmodel.passwordExporter}"
                    android:enabled="@{!safeUnbox(viewmodel.inProgress)}"
                    android:hint="Password"
                    app:onFocusChangeListener="@{viewmodel.focusChangeListener}"
                    android:inputType="textPassword"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:enabled="@{!safeUnbox(viewmodel.inProgress)}"
                android:onClick="@{viewmodel.clickListenerRegistration}"
                android:text="Sign Up"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                tools:ignore="HardcodedText" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:errorEnabled="true"
                app:error="@{viewmodel.passwordConfirmError}"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:passwordToggleEnabled="false">

                <com.tresorit.zerokit.PasswordEditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:onFocusChangeListener="@{viewmodel.focusChangeListener}"
                    android:ems="10"
                    android:enabled="@{!safeUnbox(viewmodel.inProgress)}"
                    android:hint="Password confirm"
                    android:inputType="textPassword"
                    app:passwordExporter="@{viewmodel.passwordExporterConfirm}"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:layout_width="0dip"
                android:layout_height="2dip"
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/seekbar"
                android:progressDrawable="@{viewmodel.seekbarColor}"
                android:progress="@{viewmodel.passwordStrength}"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
                android:layout_marginTop="47dp"
                app:layout_constraintRight_toRightOf="@+id/textInputLayout2"
                app:layout_constraintLeft_toLeftOf="@+id/textInputLayout2" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:visibility="@{safeUnbox(viewmodel.inProgress) ? View.VISIBLE : View.GONE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>