<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.tresorit.zerokitsdk.viewmodel.CreateTresorViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Step 1: Create a Tresor"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="A tresor is a lock box for keys that you can share with other users"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{!safeUnbox(viewmodel.inProgress)}"
            android:onClick="@{viewmodel.clickListener}"
            android:text="Create Tresor"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="HardcodedText" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:visibility="@{safeUnbox(viewmodel.inProgress) ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:visibility='@{(safeUnbox(viewmodel.inProgress) || viewmodel.tresorId.equals("")) ? View.GONE : View.VISIBLE}'
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:srcCompat="@drawable/ic_check_black_24dp"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dip"
            android:gravity="center"
            android:text="@{viewmodel.tresorId}"
            android:visibility="@{safeUnbox(viewmodel.inProgress) ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="aaaaaaaaaaaaaaaa"
            tools:visibility="visible" />


    </android.support.constraint.ConstraintLayout>
</layout>