<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_signin"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Sign In"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/tab_signup"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="Sign Up"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />
</menu>